Nest all search-input properties

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,7 +1,18 @@
+$dark-lime-green: #359567;
+$pale-lime-green: #84C8A4;
+$gray-green: #b6dcca;
+$blue-gray: #5c7894;
+$blue-gray-2:#5B7894;
+$blue-gray-3: #475d74;
+$soft-green: #C4EB67;
+$silver: #DAE4EE;
+
+$quicksand: "Quicksand", sans-serif;
+
 body {
-  background-color: #5B7894;
+  background-color: $blue-gray-2;
   display: grid;
-  font-family: "Quicksand", sans-serif;
+  font-family: $quicksand;
   grid-template-columns: 1fr 5fr;
   grid-template-areas:
     "header header"
@@ -24,12 +35,12 @@ h1 {
 }
 
 h2 {
-  color: #84C8A4;
+  color: $pale-lime-green;
   margin: 10px 0px 10px 0px;
 }
 
 h3 {
-  color: #359567;
+  color: $dark-lime-green;
   cursor: pointer;
   height: 17%;
   margin: 5px 5px 10px 0px;
@@ -37,8 +48,8 @@ h3 {
 }
 
 h4 {
-  color: #359567;
-  background-color: #C4EB67;
+  color: $dark-lime-green;
+  background-color: $soft-green;
   border-radius: 3px;
   margin: 10px 0px 0px 0px;
   padding: 1px 4px 1px 4px;
@@ -56,7 +67,7 @@ header {
 }
 
 span {
-  color: #C4EB67;
+  color: $soft-green;
   font-weight: 400;
 }
 
@@ -68,24 +79,24 @@ span {
 
 #search {
   border-radius: 15px 15px 15px 15px;
-  border: 3px outset #C4EB67;
-  box-shadow: 0px 0px 7px 0px #475d74;
+  border: 3px outset $soft-green;
+  box-shadow: 0px 0px 7px 0px $blue-gray-3;
   display: flex;
   flex-direction: row;
-  font-family: "Quicksand", sans-serif;
+  font-family: $quicksand;
   justify-content: center;
   margin: 1.2% 0.5% 1.2% 0%;
   width: 100%;
 }
 
 #search-input {
-  background-color: #b6dcca;
+  background-color: $gray-green;
   background: -webkit-gradient( linear,left top, left bottom, color-stop(0, rgb(255, 255, 255)), color-stop(1, rgb(225,225,225)));
   border-radius: 10px 0px 0px 10px;
   border: none;
-  box-shadow: inset -3px -1px 20px 1px #5c7894;
-  color: #5B7894;
-  font-family: "Quicksand", sans-serif;
+  box-shadow: inset -3px -1px 20px 1px $blue-gray;
+  color: $blue-gray-2;
+  font-family: $quicksand;
   font-size: 42px;
   height: 100%;
   outline: none;
@@ -93,27 +104,27 @@ span {
   text-align: right;
   transition: .8s ease;
   width: 100%;
-}
 
-#search-input:hover {
-  box-shadow: inset 0px 0px 0px 0px white;
-  transition: .8s ease;
-}
+  &:hover {
+    box-shadow: inset 0px 0px 0px 0px white;
+    transition: .8s ease;
+  }
 
-#search-input:focus {
-  box-shadow: inset 0px 0px 0px 0px white;
-}
+  &:focus {
+    box-shadow: inset 0px 0px 0px 0px white;
+  }
 
-#search-input::placeholder {
-  color: #5B7894;
-  font-size: 20px;
-  text-align: right;
-  text-shadow: none;
-}
+  &::placeholder {
+    color: $blue-gray-2;
+    font-size: 20px;
+    text-align: right;
+    text-shadow: none;
+  }
 
-#search-input:focus::placeholder {
-  font-size: 0px;
-  transition: .8s ease;
+  &:focus::placeholder {
+    font-size: 0px;
+    transition: .8s ease;
+  }
 }
 
 .search-label {
@@ -121,14 +132,14 @@ span {
 }
 
 .search-btn {
-  border-left: 3px outset #C4EB67;
+  border-left: 3px outset $soft-green;
   border-radius: 0px 15px 15px 0px;
   padding: 1%;
 }
 
 .nav-btn {
   align-items: center;
-  background: #5B7894 no-repeat;
+  background: $blue-gray-2 no-repeat;
   border: none;
   cursor: pointer;
   display: flex;
@@ -145,7 +156,7 @@ span {
 }
 
 .nav-btn:hover {
-  color: #C4EB67;
+  color: $soft-green;
   font-size: 14px;
   text-shadow: 0px 2px 4px black;
   transition: .4s ease;
@@ -158,7 +169,7 @@ span {
 }
 
 .saved-ingredients-btn {
-  border-left: 3px solid #C4EB67;
+  border-left: 3px solid $soft-green;
 }
 
 .ing-pan-btn {
@@ -201,9 +212,9 @@ span {
 /* FILTER SIDEBAR */
 aside {
   background-color: white;
-  display: flex;
+  display: block;
   justify-content: center;
-  height: auto;
+  height: 100%;
   text-align: center;
 }
 
@@ -238,7 +249,7 @@ main {
 
 .recipe-card {
   background-color: white;
-  border: 2px solid #C4EB67;
+  border: 2px solid $soft-green;
   border-radius: 7px;
   cursor: pointer;
   height: 270px;
@@ -260,7 +271,7 @@ main {
 }
 
 .recipe-card:hover h3 {
-  text-shadow: 0px 0px 4px #C4EB67;
+  text-shadow: 0px 0px 4px $soft-green;
   transition: .8s ease;
 }
 
@@ -292,7 +303,7 @@ main {
 }
 
 .text {
-  background: #359567;
+  background: $dark-lime-green;
   color: white;
   font-weight: 700;
   font-size: 0px;
@@ -309,12 +320,12 @@ main {
 .show-pantry-recipes-btn,
 .show-all-btn,
 .filter-btn {
-  background-color: #359567;
+  background-color: $dark-lime-green;
   border: 0;
   border-radius: 3px;
   color: white;
   cursor: pointer;
-  font-family: "Quicksand", sans-serif;
+  font-family: $quicksand;
   font-size: 12pt;
   font-weight: bold;
   padding: 5px 10px 5px 10px;
@@ -331,14 +342,14 @@ main {
 }
 
 .filter-btn:hover {
-  background-color: #84C8A4;
+  background-color: $pale-lime-green;
 }
 
 
 /* PANTRY LIST */
 .drop-menu {
   align-items: center;
-  background-color: #DAE4EE;
+  background-color: $silver;
   display: none;
   height: 600px;
   margin-left: 81%;
@@ -352,7 +363,7 @@ main {
 }
 
 .drop-menu h2 {
-  color: #359567;
+  color: $dark-lime-green;
   margin: 0px;
 }
 
@@ -366,7 +377,7 @@ main {
 /* RECIPE INSTRUCTIONS */
 .recipe-instructions {
   background: white;
-  border: 3px solid #C4EB67;
+  border: 3px solid $soft-green;
   border-radius: 10px;
   box-shadow: 1px 1px 115px black;
   display: none;
@@ -383,9 +394,9 @@ main {
 
 #exit-recipe-btn {
   background: white;
-  border: 2px double #359567;
+  border: 2px double $dark-lime-green;
   border-radius: 5px;
-  color: #359567;
+  color: $dark-lime-green;
   cursor: pointer;
   font-size: 20px;
   font-weight: 700;
@@ -395,7 +406,7 @@ main {
 }
 
 #exit-recipe-btn:hover {
-  background: #C4EB67;
+  background: $soft-green;
   transition: .3s ease;
 }
 
@@ -413,7 +424,7 @@ main {
 
 .recipe-instructions h4 {
   background: white;
-  color: #359567;
+  color: $dark-lime-green;
 }
 
 .recipe-instructions p {
@@ -426,7 +437,7 @@ main {
 
 #overlay {
   filter:alpha(opacity=50);
-  background-color: #5B7894;
+  background-color: $blue-gray-2;
   height:100%;
   left:0;
   opacity:0.5;
