--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -153,14 +153,16 @@ span {
   text-align: center;
   transition: .4s ease;
   width: 15%;
+
+  &:hover {
+    color: $soft-green;
+    font-size: 14px;
+    text-shadow: 0px 2px 4px black;
+    transition: .4s ease;
+  }
 }
 
-.nav-btn:hover {
-  color: $soft-green;
-  font-size: 14px;
-  text-shadow: 0px 2px 4px black;
-  transition: .4s ease;
-}
+
 
 .nav-btn img {
   max-height: 40px;
@@ -256,24 +258,26 @@ main {
   margin: 20px;
   padding: 15px;
   width: 250px;
+
+  &:hover .card-photo-preview {
+    opacity: 50%;
+    transition: .8s ease;
+  }
+
+  &:hover .text {
+    font-size: 20px;
+    opacity: 100%;
+    transition: .5s ease;
+    width: 100%;
+  }
+
+  &:hover h3 {
+    text-shadow: 0px 0px 4px $soft-green;
+    transition: .8s ease;
+  }
 }
 
-.recipe-card:hover .card-photo-preview {
-  opacity: 50%;
-  transition: .8s ease;
-}
 
-.recipe-card:hover .text {
-  font-size: 20px;
-  opacity: 100%;
-  transition: .5s ease;
-  width: 100%;
-}
-
-.recipe-card:hover h3 {
-  text-shadow: 0px 0px 4px $soft-green;
-  transition: .8s ease;
-}
 
 .card-apple-icon {
   cursor: pointer;
