Functionality works with method in Recipe class

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -334,6 +334,15 @@ main {
   background-color: #84C8A4;
 }
 
+.cook-me {
+  background-color: rgb(73, 96, 118);
+  border-radius: 3px;
+  color: rgb(113, 205, 161);
+  margin-top: 20px;
+  padding: 1px 4px 1px 4px;
+  width: max-content;
+}
+
 
 /* PANTRY LIST */
 .drop-menu {
