--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -6,4 +6,5 @@ $blue-gray-2:#5B7894;
 $blue-gray-3: #475d74;
 $soft-green: #C4EB67;
 $silver: #DAE4EE;
+$white: #FFFFFF;
 $quicksand: "Quicksand", sans-serif;
