--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -165,6 +165,10 @@ body {
     border-left: 3px solid $soft-green;
   }
 
+  .saved-recipes-btn {
+    border-left: 3px solid $soft-green;
+  }
+
   .ing-pan-btn {
     margin: 1% 0%;
     padding: 1px 6px 5px 0px;
@@ -212,7 +216,7 @@ body {
     grid-area: aside;
   }
 
-  .wrap {
+  .recipe-type-bar {
     background-color: white;
     height: 100vh;
     padding: 10px;
@@ -291,6 +295,7 @@ body {
     align-items: center;
     display: flex;
     height: 130px;
+
     justify-content: center;
     position: relative;
   }
@@ -437,3 +442,5 @@ body {
     display: none;
   }
 }
+
+    @import "media-queries.scss";
