--- a/src/css/media-queries.scss
+++ b/src/css/media-queries.scss
@@ -4,29 +4,36 @@
 
 @media only screen and (max-width: 700px) {
 	body {
-		display: block;
+		display: flex;
+		flex-direction: column;
 
-		// .aside,
-		// #blockColorblindContent,
-		// #search,
-		// header {
-		// 	display: none!important;
-		// }
 
     aside {
       display: none;
     }
 
-		// h1 {
-		// 	margin-top: -.5em;
-		// }
+		header {
+			display: flex;
+			flex-direction: column;
+			height: 20em;
+		}
+
+		h1 {
+			padding-bottom: .5em;
+		}
 
     #search {
-      display: none;
+      align-self: center;
+			width: 80%;
     }
-    .nav-btn {
-      display: none;
-    }
+    // .nav-btn {
+    //   display: none;
+    // }
+
+		.nav-buttons {
+			display: flex;
+			flex-direction: row;
+		}
 
 		.banner-image {
 			height: 185px;
@@ -41,6 +48,11 @@
 			border: none;
 			outline: none;
 			padding-left: 9em;
+		}
+
+		.hidden {
+
+			display: none!important;
 		}
 
 		main {
@@ -155,6 +167,8 @@
 .recipe-type-bar {
   display: none;
 }
+
+
 
 // .search-btn {
 //   display: none;
