--- a/src/css/media-queries.scss
+++ b/src/css/media-queries.scss
@@ -1,7 +1,3 @@
-// @mixin iphone-size {
-//   @media(max-width: 600px) { @content }
-// };
-
 @media only screen and (max-width: 700px) {
 	body {
 		display: flex;
@@ -24,9 +20,10 @@
       align-self: center;
 			width: 80%;
     }
-    // .nav-btn {
-    //   display: none;
-    // }
+
+		.show-all-btn {
+			margin-bottom: 10px;
+		}
 
 		.nav-buttons {
 			display: flex;
