Add New down arrown icon in mobile and re-display the tag search aside

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -217,6 +217,7 @@ body {
   .welcome-msg h1 {
     color: white;
     width: 100%;
+    width: max-content
   }
 
   .my-recipes-banner {
@@ -225,10 +226,14 @@ body {
   }
 
   .welcome-msg {
-    margin-top: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 
-
+  #tag-toggle {
+    display: none;
+  }
   /* FILTER SIDEBAR */
   aside {
     background-color: white;
