Small CSS and accessibility changes

--- a/src/css/media-queries.scss
+++ b/src/css/media-queries.scss
@@ -17,6 +17,10 @@
 			width: 80%;
     }
 
+		.show-all-btn {
+			margin-bottom: 10px;
+		}
+
 		.nav-buttons {
 			display: flex;
 			flex-direction: row;
