--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,5 +1,6 @@
 @import "mixins.scss";
 @import "variables.scss";
+@import "media-queries.scss";
 html{
   height: 100%;
 }
@@ -473,23 +474,11 @@ body {
   }
 
   #buy-btn {
-    background-color: #359567;
-    border: none;
-    border-radius: 4px;
-    color: #FFFFFF;
-    outline: none;
-    margin: 5px;
-    padding: 5px;
+    @include buy-buttons
   }
 
   #buy-user-list-btn {
-    background-color: #359567;
-    border: none;
-    border-radius: 4px;
-    color: #FFFFFF;
-    outline: none;
-    margin: 5px;
-    padding: 5px;
+    @include buy-buttons
   }
 
 
@@ -497,5 +486,3 @@ body {
     display: none;
   }
 }
-
-@import "media-queries.scss";
