--- a/src/css/mixins.scss
+++ b/src/css/mixins.scss
@@ -14,3 +14,13 @@
   font-weight: bold;
   padding: 5px 10px 5px 10px;
 }
+
+@mixin buy-buttons {
+  background-color: #359567;
+  border: none;
+  border-radius: 4px;
+  color: #FFFFFF;
+  outline: none;
+  margin: 5px;
+  padding: 5px;
+}
