--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -75,7 +75,7 @@ body {
   #search {
     border-radius: 15px 15px 15px 15px;
     border: 3px outset $soft-green;
-    box-shadow: 0px 0px 7px 0px $blue-gray-3;
+    box-shadow: 0px 0px 7px 0px $searchbar;
     display: flex;
     flex-direction: row;
     font-family: $quicksand;
