--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -2,8 +2,8 @@ $dark-lime-green: #359567;
 $pale-lime-green: #84C8A4;
 $gray-green: #b6dcca;
 $blue-gray: #5c7894;
-$blue-gray-2:#5B7894;
-$blue-gray-3: #475d74;
+$background-blue:#5B7894;
+$searchbar: #475d74;
 $soft-green: #C4EB67;
 $silver: #DAE4EE;
 $white: #FFFFFF;
