--- a/src/css/media-queries.scss
+++ b/src/css/media-queries.scss
@@ -51,7 +51,7 @@
 
 		.hamburger {
 			display: flex;
-			background-color: $blue-gray-2;
+			background-color: $background-blue;
 			border: none;
 			outline: none;
 			padding-left: 9em;
