Complete scss refactor

--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,10 +1,8 @@
-$dark-lime-green: #359567;
-$pale-lime-green: #84C8A4;
-$gray-green: #b6dcca;
-$blue-gray: #5c7894;
+$green-title-font: #359567;
+$box-shadow-blue: #5c7894;
 $background-blue:#5B7894;
 $searchbar: #475d74;
-$soft-green: #C4EB67;
-$silver: #DAE4EE;
+$border-hover-green: #C4EB67;
+$menu-silver: #DAE4EE;
 $white: #FFFFFF;
 $quicksand: "Quicksand", sans-serif;
