--- a/src/css/mixins.scss
+++ b/src/css/mixins.scss
@@ -4,7 +4,7 @@
 }
 
 @mixin buttons {
-  background-color: $dark-lime-green;
+  background-color: $green-title-font;
   border: 0;
   border-radius: 3px;
   color: white;
