Increase accessibility score by adding recipe label in search bar

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -143,6 +143,10 @@ body {
     }
   }
 
+.recipe-tag {
+  opacity: 0%;
+}
+
   .search-btn {
     border-left: 3px outset $border-hover-green;
     border-radius: 0px 15px 15px 0px;
